--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.ViewPagerFragment"
-    android:id="@+id/viewpager_fragment_container">
+    android:id="@+id/viewpager_fragment_container"
+    android:background="@drawable/view_pager_background"
+    >
 
     <TextView
         android:id="@+id/fragment_name"
