--- a/app/src/main/res/drawable/view_pager_background.xml
+++ b/app/src/main/res/drawable/view_pager_background.xml
@@ -4,18 +4,18 @@
 
     <!-- View background color -->
     <solid
-        android:color="@color/colorPrimary" >
+        android:color="@color/fragment_bg_color" >
     </solid>
 
     <!-- View border color and width -->
     <stroke
         android:width="1dp"
-        android:color="@color/colorAccent" >
+        android:color="@color/black" >
     </stroke>
 
     <!-- The radius makes the corners rounded -->
     <corners
-        android:radius="2dp"   >
+        android:radius="8dp"   >
     </corners>
 
 </shape>
