--- a/app/src/main/res/layout/fragment_display.xml
+++ b/app/src/main/res/layout/fragment_display.xml
@@ -15,7 +15,7 @@
         android:layout_margin="8dp"
         android:gravity="center"
         android:text="@string/hello_blank_fragment"
-        android:textSize="40sp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -30,9 +30,20 @@
         android:layout_margin="8dp"
         android:gravity="center"
         android:text="@string/hello_blank_fragment"
-        android:textSize="30sp"
+        android:textSize="25sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/display_frag_title" />
+
+    <TextView
+        android:id="@+id/display_frag_author"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:gravity="center"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/display_frag_quote" />
 
 </android.support.constraint.ConstraintLayout>
