--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -2,17 +2,18 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/viewpager_fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ViewPagerFragment"
-    android:id="@+id/viewpager_fragment_container"
     android:background="@drawable/view_pager_background"
-    >
+    tools:context=".fragment.ViewPagerFragment">
 
     <TextView
         android:id="@+id/fragment_name"
         android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:gravity="center"
+        android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
