splash screen working as intended

--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/splash_screen_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SplashFrag"
-    android:background="@color/colorAccent"
-    android:id="@+id/splash_screen_container">
+    android:background="@color/white"
+    tools:context=".fragment.SplashFrag">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="THIS IS THE SPLASHSCREEN" />
+        android:gravity="center"
+        android:text="THIS IS THE SPLASHSCREEN"
+        android:textSize="50sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
