--- a/app/src/main/res/layout/fragment_display.xml
+++ b/app/src/main/res/layout/fragment_display.xml
@@ -46,4 +46,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/display_frag_quote" />
 
+    <ImageButton
+        android:id="@+id/display_frag_email"
+        android:layout_width="80dp"
+        android:layout_height="60dp"
+        android:src="@drawable/email_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
