--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
     <!-- Base application theme. -->
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/fragment_bg_color</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -10,6 +10,10 @@
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/ic_launcher_background</item>
+    </style>
+
+    <style name="HeaderBar">
+        <item name="android:background">@color/fragment_bg_color</item>
     </style>
 
 </resources>
