--- a/app/src/main/res/layout/fragment_display.xml
+++ b/app/src/main/res/layout/fragment_display.xml
@@ -5,7 +5,7 @@
     android:id="@+id/display_frag_containter"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/view_pager_background"
+    android:background="@drawable/display_frag_background"
     android:clickable="true"
     tools:context=".fragment.DisplayFragment"
     android:elevation="16dp">
@@ -52,6 +52,7 @@
         android:layout_height="60dp"
         android:src="@drawable/email_logo"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:contentDescription="@string/email_icon_desc" />
 
 </android.support.constraint.ConstraintLayout>
