--- a/app/src/main/res/layout/fragment_display.xml
+++ b/app/src/main/res/layout/fragment_display.xml
@@ -18,33 +18,39 @@
         android:gravity="center"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4" />
+        app:layout_constraintVertical_bias="0.082" />
 
     <TextView
         android:id="@+id/display_frag_quote"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:textSize="25sp"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/display_frag_title" />
+        app:layout_constraintTop_toBottomOf="@id/display_frag_title"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/display_frag_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/display_frag_quote" />
+        app:layout_constraintTop_toBottomOf="@+id/display_frag_quote"
+        app:layout_constraintVertical_bias="0.132" />
 
     <ImageButton
         android:id="@+id/display_frag_email"
